# rsort

./: Cargo.toml  index.html  rsort-7915aa4e75a42136.js  rsort-7915aa4e75a42136_bg.wasm  rsort-abe7c0c3e60a8502.js  rsort-abe7c0c3e60a8502_bg.wasm  trunk.toml
.github/workflows/: push.yaml
src/: lib.rs  main.rs
src/components/: bar.rs
src/sorts/: bubble.rs  insertion.rs  mod.rs  quick.rs  selection.rs
